[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://resources/collision/CollisionShape2D.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 318.5, 10 )

[sub_resource type="RectangleShape2D" id=5]
resource_local_to_scene = true
extents = Vector2( 10, 180.5 )

[sub_resource type="RectangleShape2D" id=6]
resource_local_to_scene = true
extents = Vector2( 10, 325 )

[sub_resource type="RectangleShape2D" id=7]
resource_local_to_scene = true
extents = Vector2( 185.5, 10 )

[node name="Camera2D" type="Camera2D"]
position = Vector2( 251, 65 )
current = true
script = ExtResource( 1 )

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" parent="HurtArea" instance=ExtResource( 2 )]
position = Vector2( 0, -195 )
shape = SubResource( 1 )

[node name="HurtArea2" type="Area2D" parent="."]
rotation = 3.14159
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" parent="HurtArea2" instance=ExtResource( 2 )]
position = Vector2( -336, 0.999149 )
shape = SubResource( 5 )

[node name="HurtArea3" type="Area2D" parent="."]
rotation = 1.5708
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" parent="HurtArea3" instance=ExtResource( 2 )]
position = Vector2( 194, -5.00072 )
shape = SubResource( 6 )

[node name="HurtArea4" type="Area2D" parent="."]
rotation = -1.5708
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" parent="HurtArea4" instance=ExtResource( 2 )]
position = Vector2( 1.00122, -336 )
shape = SubResource( 7 )
